# NetworkKursach

./: CMakeLists.txt  Game.cpp  Game.h  GameServer.cpp  GameServer.h  Lobby.h  Room.h  Server.cpp  Server.h  handlers.cpp  handlers.h  main.cpp  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/clientkurswork/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/clientkurswork/: ConnectAwaitingFragment.kt  Field.kt  FragmentActivitySignalman.kt  GameActivity.kt  GameEngine.kt  GameViewModel.kt  GameViewModelFactory.kt  MainActivity.kt  MyApp.kt  NetworkHandler.kt  ParchisBoard.kt  ParchisBoardUI.kt  ParchisViewModel.kt  PieceView.kt  PlayerData.kt  SingleGameActivity.kt  StartWindowFragment.kt
app/src/main/java/com/example/clientkurswork/enums/: CellTextDirection.kt  CellType.kt  Player.kt
app/src/main/java/com/example/clientkurswork/models/: BaseModel.kt  CellModel.kt  HomeModel.kt  PieceModel.kt  PlayerModel.kt
app/src/main/java/com/example/clientkurswork/online_game/: ConnectAwaitingFragment.kt  NetworkHandler.kt  OnlineGameActivity.kt  PlayerData.kt
app/src/main/res/drawable/: animated_progress_bar.xml  progressbar.xml
app/src/main/res/layout/: activity_game.xml  fragment_awaiting.xml  fragment_start_window.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/test/java/com/example/clientkurswork/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
